feat: FABRICATED product stock computed from recipe ingredients + dashboard query optimization
- InventoryService: computeFabricatedQty calculates virtual stock from recipe
- StockItemDTO: expose productType field to frontend
- ProductController: inject repositories for recipe assignment endpoint
- DashboardService: null-safe SUM aggregation for shifts with no sales
- ClosingDepositRepository: native SQL updateDepositInfo for imageUri propagation
- BankDepositService: use updateDepositInfo instead of saveAll
- Flyway V5: backfill migration for existing closing deposit image_uri
- Tests: rewrite DashboardServiceTest, fix ProductControllerTest and BankDepositServiceTest

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>